# Projeto_SOE

./: CMakeLists.txt  README.md
include/: botao.h  camera.h  laser.h  lcd.h
src/: botao.cpp  camera.cpp  laser.cpp  lcd.cpp  main.cpp
